[package]
name = "cli-table"
version = "0.3.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A crate for printing tables on command line"
homepage = "https://github.com/devashishdxt/cli-table"
repository = "https://github.com/devashishdxt/cli-table"
categories = ["command-line-interface"]
keywords = ["table", "cli", "format"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
edition = "2018"

[lib]
name = "cli_table"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1"
unicode-width = "0.1"
