[package]
name = "cli-table-derive"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A crate for printing tables on command line"
homepage = "https://github.com/devashishdxt/cli-table"
repository = "https://github.com/devashishdxt/cli-table"
categories = ["command-line-interface"]
keywords = ["table", "cli", "format"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]