[package]
name = "test-suite"
version = "0.1.0"
authors = ["devashishdixit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = { path = "../cli-table" }

[dev-dependencies]
rustversion = "1.0.5"
trybuild = { version = "1.0.42", features = ["diff"] }
