[package]
name = "test-suite"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = { path = "../cli-table" }

[dev-dependencies]
rustversion = "1.0.20"
trybuild = { version = "1.0.104", features = ["diff"] }
